src/test/compile-fail/borrowck-ref-into-rvalue.rs
fn main() {
    let msg;
    match Some(~"Hello") { //~ ERROR illegal borrow
        Some(ref m) => {
            msg = m;
        },  
        None => { fail }
    }   
    io::println(*msg);
}

